--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
 
     <!-- main -->
     <main>
+      <!-- hero -->
       <div class="hero">
         <div class="main-content">
           <div class="body">
@@ -124,6 +125,31 @@
               <p class="desc stats">
                 <strong>50K</strong> Students <strong>70+</strong> Courses
               </p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Popular -->
+      <div class="popular">
+        <div class="main-content">
+          <div class="popular-top">
+            <!-- popular left -->
+            <div class="info">
+              <h2 class="heading-lv2">Our popular courses</h2>
+              <p class="desc">
+                Build new skills with new trendy courses and shine for the next
+                future career.
+              </p>
+            </div>
+            <!-- popular right -->
+            <div class="controls">
+              <button class="control-btn">
+                <img src="./assets/icon/prev.svg" alt="" />
+              </button>
+              <button class="control-btn">
+                <img src="./assets/icon/next.svg" alt="" />
+              </button>
             </div>
           </div>
         </div>
