--- a/index.html
+++ b/index.html
@@ -164,14 +164,23 @@
               /></a>
               <div class="info">
                 <div class="head">
-                  <h3 class="tittle"><a href="#!">Basic web design</a></h3>
+                  <h3 class="tittle">
+                    <a class="line-clamp" href="#!"
+                      >Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                      Blanditiis tempore, explicabo quasi dolore autem nihil,
+                      exercitationem veniam fuga error deleniti consequatur hic
+                      aperiam quae consequuntur obcaecati nesciunt optio natus
+                      neque, iste consectetur officiis? Dolorem vitae sapiente
+                      reiciendis mollitia iure debitis.</a
+                    >
+                  </h3>
 
                   <div class="rating">
                     <img src="./assets/icon/star.svg" alt="" class="star" />
                     <span class="value">4.5</span>
                   </div>
                 </div>
-                <p class="desc">
+                <p class="desc line-clamp line-2">
                   Get the best course, gain knowledge and shine for your future
                   career.
                 </p>
@@ -192,14 +201,16 @@
               /></a>
               <div class="info">
                 <div class="head">
-                  <h3 class="tittle"><a href="#1">UI/UX design</a></h3>
+                  <h3 class="tittle">
+                    <a class="line-clamp" href="#1">UI/UX design</a>
+                  </h3>
 
                   <div class="rating">
                     <img src="./assets/icon/star.svg" alt="" class="star" />
                     <span class="value">4.5</span>
                   </div>
                 </div>
-                <p class="desc">
+                <p class="desc line-clamp line-2">
                   Get the best course, gain knowledge and shine for your future
                   career.
                 </p>
@@ -220,14 +231,16 @@
               /></a>
               <div class="info">
                 <div class="head">
-                  <h3 class="tittle"><a href="#1">Web App design</a></h3>
+                  <h3 class="tittle">
+                    <a class="line-clamp" href="#1">Web App design</a>
+                  </h3>
 
                   <div class="rating">
                     <img src="./assets/icon/star.svg" alt="" class="star" />
                     <span class="value">4.5</span>
                   </div>
                 </div>
-                <p class="desc">
+                <p class="desc line-clamp line-2">
                   Get the best course, gain knowledge and shine for your future
                   career.
                 </p>
