--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="./assets/css/stylee.css" />
     <title>Figma-to-html</title>
   </head>
-  <body style="height: 100000px">
+  <body style="height: 10000px">
     <!-- header -->
     <header class="header fixed">
       <div class="main-content">
@@ -248,6 +248,42 @@
                   <span class="price">$120.75</span>
                   <button class="btn btn-book">Book Now</button>
                 </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Feedback -->
+      <div class="feedback">
+        <div class="main-content">
+          <div class="feedback-list">
+            <div class="feedback-item">
+              <!-- khối bên trái -->
+              <div class="info">
+                <img src="./assets/img/avt.jpg" alt="" class="avatar" />
+                <p class="member-name">Peter Moor</p>
+                <p class="desc">Student of Web Design</p>
+                <div class="dots">
+                  <span class="dot"></span>
+                  <span class="dot active"></span>
+                  <span class="dot"></span>
+                </div>
+              </div>
+
+              <!-- khối bên phải -->
+              <div class="content">
+                <img
+                  src="./assets/icon/open-quotes.svg"
+                  alt=""
+                  class="open-quotes"
+                />
+                <blockquotes
+                  >Not only does my resume look impressive—filled with the names
+                  and logos of world-class institutions—but these certificates
+                  also bring me closer to my career goals by validating the
+                  skills I've learned."
+                </blockquotes>
               </div>
             </div>
           </div>
